--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/items
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=olx
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
