--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,17 @@ plugins {
 	id "org.sonarqube" version "5.0.0.4638"
 }
 
+sonar {
+	properties {
+		property "sonar.projectKey", "crudSonarCube"
+		property "sonar.host.url", "http://localhost:9000"
+		property "sonar.sources", "src/main"
+		property "sonar.tests", "src/test"
+		property "sonar.java.coveragePlugin", "jacoco"
+		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+		}
+}
+
 jacoco {
 	toolVersion = '0.8.7'
 }
