--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,21 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.0
-    container_name: mysql-db
-    environment:
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: items
-      MYSQL_USER: olx
-      MYSQL_PASSWORD: 1234
+    container_name: mysql_crudSonar
     ports:
       - "3306:3306"
+    environment:
+      MYSQL_DATABASE: crudSonar
+      MYSQL_ROOT_PASSWORD: hgrDWRdzNh4LbWd61XvZJ86PcEt9mJ3jHNsmqW8LkHA=
     volumes:
-      - mysql-data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u olx -p1234"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - mysql_crudSonar:/var/lib/mysql
 
   flyway:
     image: flyway/flyway:latest
     container_name: flyway-migrate
-    depends_on:
-      mysql:
-        condition: service_healthy
-    command: -url=jdbc:mysql://mysql:3306/items -user=olx -password=1234 -locations=filesystem:/flyway/sql migrate
+    command: -url=jdbc:mysql://mysql:3306/crudSonar?allowPublicKeyRetrieval=true -user=root -password=hgrDWRdzNh4LbWd61XvZJ86PcEt9mJ3jHNsmqW8LkHA= -locations=filesystem:/flyway/sql migrate
     volumes:
       - ./src/main/resources/db/migration:/flyway/sql
 
 volumes:
-  mysql-data:
+  mysql_crudSonar:
