--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ sonar {
 		property "sonar.tests", "src/test"
 		property "sonar.java.coveragePlugin", "jacoco"
 		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
-		}
+		property "sonar.exclusions","src/main/resources/application.properties"
+	}
 }
 
 jacoco {
