--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/crudSonar
+spring.datasource.username=root
+spring.datasource.password=hgrDWRdzNh4LbWd61XvZJ86PcEt9mJ3jHNsmqW8LkHA=
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
